--- a/page/moose.css
+++ b/page/moose.css
@@ -19,6 +19,10 @@
   text-align: center;
 }
 
+.vspace{
+  padding-top: 80px;
+}
+
 /* GLOBAL STYLES
 -------------------------------------------------- */
 .btn-custom {
@@ -97,6 +101,7 @@ a {
   height: 500px;
   margin-bottom: 60px;
 }
+
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
   z-index: 10;
